# SteamDepCalc

./: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
libs/: connection.py  tabulate.py
steamdepcalc/: __main__.py  connection.py  currencies.py  default_steam_id_data.txt  encryption.py  essential.py
