[metadata]
name = steamdepcalc
version = 0.0.1
author = Extamov
description = A script that calculates best steam skins for buying from 3rd party and sell in steam.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0

[options]
packages = steamdepcalc
python_requires = >=3.5
install_requires =
    asyncio
    aiohttp
    pycryptodomex
    tabulate

[options.package_data]
    file: README.md, LICENSE

[options.entry_points]
console_scripts =
    steamdepcalc = steamdepcalc.__main__:entrypoint